# thinkweave

./: .gitignore  .mcp.json  ARCHITECTURE.md  ARCHITECTURE_NOTES.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: research-news-worker.md  research-newsletter-worker.md  research-youtube-worker.md
.claude/plugins/personal-mem/: README.md  plugin.json
.claude/plugins/thinkweave/: README.md
.github/workflows/: tests.yml
agents/: dream-digest-worker.md  dream-essence-worker.md  dream-judge-worker.md  dream-merge-worker.md  dream-outcome-worker.md  dream-priority-worker.md  dream-promotion-worker.md  dream-seam-link-worker.md  dream-seam-worker.md  dream-theme-worker.md  dream-wrap-worker.md  news-triage-worker.md  research-news-worker.md  research-newsletter-worker.md  research-podcast-worker.md  research-youtube-worker.md  seed-enrich-worker.md
commands/: _source_template.md  backfill-hubs.md  capture.md  discover.md  drain.md  dream.md  enrich-notes.md  hubs-link.md  import-chatgpt.md  ingest-paper-file.md  ingest.md  judge-prediction.md  mem-resolve-concepts.md  mem-wrap.md  news.md  newsletter.md  onboard.md  podcast.md  research.md  seed-enrich.md  source-fit.md  source-scaffold.md  substack.md  themes-resolve.md  tighten.md  update-hubs.md  weave-wrap.md  wrap.md  youtube.md
commands/research/: research-article.md  research-paper.md  research-podcast.md  research-repo.md  research-youtube.md
docs/: ARCHITECTURE_NOTES.md  CLI-AND-MCP.md  INSTALL-VALIDATION.md  LIFECYCLES.md  SCHEMA.md  SKILLS.md  dream-promotion-worker-gaps-2026-07-07.md  hubs-plan-singleton-preflight-2026-07-06.md  migration-findings-2026-07-06.md  sources-overlay-decision.md  theme-hub-backfill-gap-2026-07-07.md  weave-cli-not-on-path-2026-07-13.md  windows-runtime-gaps-2026-07-07.md
docs/agents/: arch-proposal.command.md  domain.md  issue-loop-memory.md  issue-loop.command.md  issue-loop.md  issue-tracker.md  loop.toml  plan-distill.command.md  ponytail-audit.command.md  ponytail-review.command.md  steering.md  triage-labels.md  vault-issue-contract.md
hooks/: hooks.json
scripts/: batch_merge.py  classify_singletons.py  cleanup_tag_concept_overlap.py  enrich_concepts.py  enrich_file_edges.py  example-crontab  example-flows.yaml  github_repo_discover.py  issue_loop.py  migrate_prediction_history.py  mint_seed_candidates.py  ontology_cleanup_2026_05.py  promote_and_backfill.py  prune_singletons.py  prune_singletons_2026_05_04.py  pull_news_feeds.py  redistribute_domain_path_hubs.py  route_unscoped.py  run_judge.py  salvage_inverted_hub_refs.py  validate-install.sh
scripts/archive/: backfill_note_aliases.py  cleanup_tag_concept_overlap.py  dump_event_corpus.py  enrich_file_edges.py  mem-hook-wrapper.sh  migrate_phase1_vault.py  migrate_phase3_projects.py  migrate_phase45_vault.py  ontology_cleanup_2026_05.config.yaml  prune_singletons.py  resolve_concepts_2026_05_04.py  route_unscoped.py
src/personal_mem/: __init__.py  __main__.py  cli.py  concepts.py  config.py  context.py  embeddings.py  enrich.py  extract.py  flows.py  hubs.py  indexer.py  judge.py  landing.py  ontology.example.yaml  ontology.yaml  prune.py  schemas.py  search.py  skill_runner.py  themes.py  vault.py
src/personal_mem/acquisition/: __init__.py
src/personal_mem/core/: _utils.py  agent_client.py  api_config.py  api_keys.py  buffer.py  config.py  embedding_provider.py  embeddings.py  events.py  indexer.py  plugin_route.py  schemas.py  spend.py  vault.py
src/personal_mem/discover/: __init__.py
src/personal_mem/hooks/: handler.py  install.py  run_hook.sh
src/personal_mem/importers/: chatgpt.py  claude_history.py  claude_mem.py  hive_insights.py  messenger.py  transcript.py
src/personal_mem/mcp/: __init__.py  server.py
src/personal_mem/onboarding/: __init__.py  claude_code_seed.py  enrich_batch.py
src/personal_mem/operations/: __init__.py  _backfill_route.py  concepts.py  decisions.py  drain.py  dream.py  dream_tasks.py  enrich.py  extract.py  flows.py  graph.py  hubs.py  hubs_batch.py  landing.py  migrations.py  news_dedup.py  news_triage.py  notes.py  prompt_time_retrieval.py  prompts.py  prune.py  queue.py  rejudge_queue.py  reports.py  retrieval_log.py  rlvr_export.py  seam_link_queue.py  search.py  wrap.py
src/personal_mem/retrieval/: context.py  search.py  temporal.py
src/personal_mem/scheduling/: __init__.py  cron.py  registry.py  taskscheduler.py
src/personal_mem/sources/: __init__.py  config.py  frontmatter.py  priorities.py  queue.py  registry.py
src/personal_mem/synthesis/: concept_hub.py  concepts.py  enrich.py  gemini_extract.py  geometry.py  hub.py  judge.py  landing.py  memory_seam.py  prediction.py  theme_candidates.py  theme_hub.py  theme_registry.py  transcript_extract.py
src/personal_mem/vault_templates/: source_skill_template.md
src/thinkweave/: __init__.py  __main__.py
src/thinkweave/core/: agent_client.py  api_config.py  api_keys.py  buffer.py  config.py  embedding_provider.py  embeddings.py  events.py  indexer.py  plugin_route.py  (+2 more)
tests/: conftest.py  test_agent_client.py  test_api_config.py  test_api_keys.py  test_backfill_route.py  test_centrality.py  test_chatgpt_import.py  test_claude_code_seed.py  test_cli_parity.py  test_cli_surface.py  test_co_served_edges.py  test_concepts_doctor.py  test_concepts_drift.py  test_config.py  test_config_dir_fallback.py  test_context.py  test_context_served.py  test_discover_strategies.py  test_doctor_stale_embeddings.py  test_dream.py  test_dream_drift_v2.py  test_dream_hub_sql.py  test_dream_tasks.py  test_embedding_provider.py  test_embedding_search_guard.py  test_embedding_search_vectorized.py  test_embeddings_keepwarm.py  test_extract.py  test_extract_commit_tighten.py  test_extract_wrap_handoff.py  test_flows.py  test_focus_research_strategy.py  test_gemini_extract.py  test_geometry.py  test_hook_launcher.py  test_hooks.py  test_hub_fold.py  test_hub_log_projection.py  test_hub_unified.py  test_hubs.py  (+83 more)
vault_templates/: decision.md  note.md  session.md  source.md
(+231 files in other folders)
