[project]
name = "personal-mem"
version = "0.1.0"
description = "Obsidian-native universal memory layer for agentic systems"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
embeddings = ["httpx"]
hubs = ["openai>=1.50"]
seed = ["anthropic>=0.40"]
news = ["feedparser>=6.0", "readability-lxml>=0.8.1", "httpx"]
gemini = ["google-genai>=1.0"]
youtube = [
    "youtube-transcript-api>=1.0",
]
all = ["personal-mem[mcp,embeddings,hubs,seed,news,gemini,youtube]"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
mem = "personal_mem.surfaces.cli:main"
mem-hook = "personal_mem.surfaces.hooks.handler:main"
mem-mcp = "personal_mem.surfaces.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/personal_mem"]

[tool.hatch.build.targets.wheel.force-include]
"src/personal_mem/vault_templates" = "personal_mem/vault_templates"
"src/personal_mem/ontology.yaml" = "personal_mem/ontology.yaml"
"src/personal_mem/ontology.example.yaml" = "personal_mem/ontology.example.yaml"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "perf: performance regression assertion (may be skipped on slow CI hosts)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
