[project]
name = "personal-mem"
version = "0.1.0"
description = "Obsidian-native universal memory layer for agentic systems"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
# After 2026-06-06 API consolidation, openai is the single completion SDK
# (the wrapper uses AsyncOpenAI with custom base_url for Anthropic/Gemini
# OpenAI-compat endpoints) — moved out of the [hubs] extra into [embeddings]
# so any opt-in extra that pulls openai also pulls httpx for embeddings.
embeddings = ["httpx", "openai>=1.50"]
embeddings-local = ["sentence-transformers>=2.5"]
embeddings-litellm = ["litellm>=1.0"]
hubs = ["openai>=1.50"]
# anthropic SDK retired 2026-06-06 (B5/C2): the Anthropic Batches path was
# the only consumer; backfills now go through the openai SDK + Anthropic's
# OpenAI-compat endpoint via core.agent_client. The [seed] extra is empty
# but retained as an installable alias for back-compat with docs / scripts.
seed = []
news = ["feedparser>=6.0", "readability-lxml>=0.8.1", "httpx"]
gemini = ["google-genai>=1.0"]
youtube = [
    "youtube-transcript-api>=1.0",
]
all = ["personal-mem[mcp,embeddings,hubs,news,gemini,youtube]"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
mem = "personal_mem.surfaces.cli:main"
mem-hook = "personal_mem.surfaces.hooks.handler:main"
mem-mcp = "personal_mem.surfaces.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/personal_mem"]

[tool.hatch.build.targets.wheel.force-include]
"src/personal_mem/vault_templates" = "personal_mem/vault_templates"
"src/personal_mem/ontology.yaml" = "personal_mem/ontology.yaml"
"src/personal_mem/ontology.example.yaml" = "personal_mem/ontology.example.yaml"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "perf: performance regression assertion (may be skipped on slow CI hosts)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
