[project]
name = "thinkweave"
version = "0.1.1"
description = "Obsidian-native universal memory layer for agentic systems"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Marek Paluch" }]
keywords = [
    "obsidian",
    "memory",
    "knowledge-management",
    "mcp",
    "claude-code",
    "rag",
    "markdown",
    "sqlite",
    "agent-memory",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = ["pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/marekpal97/thinkweave"
Repository = "https://github.com/marekpal97/thinkweave"
Issues = "https://github.com/marekpal97/thinkweave/issues"
"Release Notes" = "https://github.com/marekpal97/thinkweave/releases"

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
# After 2026-06-06 API consolidation, openai is the single completion SDK
# (the wrapper uses AsyncOpenAI with custom base_url for Anthropic/Gemini
# OpenAI-compat endpoints) — moved out of the [hubs] extra into [embeddings]
# so any opt-in extra that pulls openai also pulls httpx for embeddings.
embeddings = ["httpx", "openai>=1.50", "numpy>=1.26"]
embeddings-local = ["sentence-transformers>=2.5"]
embeddings-litellm = ["litellm>=1.0"]
hubs = ["openai>=1.50"]
# anthropic SDK retired 2026-06-06 (B5/C2): the Anthropic Batches path was
# the only consumer; backfills now go through the openai SDK + Anthropic's
# OpenAI-compat endpoint via core.agent_client. The empty [seed] back-compat
# alias was removed in the 2026-06-13 pre-ship sweep (zero references).
news = ["feedparser>=6.0", "readability-lxml>=0.8.1", "httpx"]
gemini = ["google-genai>=1.0"]
youtube = [
    "youtube-transcript-api>=1.0",
]
all = ["thinkweave[mcp,embeddings,hubs,news,gemini,youtube]"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
weave = "thinkweave.surfaces.cli:main"
weave-hook = "thinkweave.surfaces.hooks.handler:main"
weave-mcp = "thinkweave.surfaces.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# `packages` already ships everything under src/thinkweave — including the
# non-.py data tree vault_templates/ (config seeds, note_formats, skill
# templates). A force-include of vault_templates here would double-add those
# files and break the wheel build, so it is intentionally absent.
packages = ["src/thinkweave"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# E741 (ambiguous name `l`/`I`/`O`): purely stylistic; the tree uses `l` as a
# short-lived line/loop variable in ~33 comprehensions and renaming them is
# churn without a readability win. Revisit if a real confusion bug ever lands.
ignore = ["E741"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "perf: performance regression assertion (may be skipped on slow CI hosts)",
]

[tool.bumpversion]
# One command bumps every version surface + commits + tags the release:
#   uvx bump-my-version bump minor      # 0.1.0 → 0.2.0  (+ tag v0.2.0)
# In 0.x the MINOR slot is the breaking one (SemVer community convention), so
# stay on 0.x until the weave_* MCP + CLI surface is stable enough to promise
# no breakage; flipping to 1.0.0 is `bump-my-version bump major`.
# src/thinkweave/__init__.py is intentionally NOT a target: it derives the
# version from installed package metadata, so pyproject is its single source.
current_version = "0.1.1"
commit = true
tag = true
tag_name = "v{new_version}"
message = "chore: release v{new_version}"
tag_message = "Release v{new_version}"
allow_dirty = false

# pyproject [project] version. Regex-anchored to the line start so it does NOT
# also rewrite the `current_version` line above (which ends in `version = "…"`).
[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "(?m)^version = \"{current_version}\""
replace = "version = \"{new_version}\""
regex = true

[[tool.bumpversion.files]]
filename = ".claude-plugin/plugin.json"
search = "\"version\": \"{current_version}\""
replace = "\"version\": \"{new_version}\""

# Marketplace catalog version — kept lock-step with the plugin for simplicity.
[[tool.bumpversion.files]]
filename = ".claude-plugin/marketplace.json"
search = "\"version\": \"{current_version}\""
replace = "\"version\": \"{new_version}\""

[dependency-groups]
# `uv sync` installs this group by default. The test suite exercises the MCP
# surface (surfaces/mcp/tools), which imports the optional `mcp` extra — so
# `mcp` belongs here even though it stays an OPTIONAL runtime extra for the
# shipped package (dependency-groups are dev-only and never published). Without
# it a fresh `uv sync` + `pytest` hard-fails ~18 MCP tests with
# ModuleNotFoundError instead of exercising the product's core surface.
# CI installs the full surface with `uv sync --all-extras` (see the CI note in
# the PR / docs) so embeddings/news/gemini/youtube paths are covered too.
dev = [
    "pytest>=9.0.2",
    "bump-my-version>=0.28",
    "mcp>=1.0",
]
